src/components/Sidebar/Sidebar.scss
@import '../../styles/base/base';
@import '../../styles/mixins/mixins';

$_button-rounding-size: 1.7rem;
$_toggle-size: 2.8rem;
$_margin-size: 1.6rem;

.sidebar {
    background-color: $color-bright-violet;
    flex-grow: 0;
    height: 100vh;
    position: fixed;
    z-index: $z-index-sidebar;

    &__logo {
        fill: $color-white;
        height: 4.8rem;

        transition: fill 1500ms;
        transition-delay: 300ms;
        width: 11.425rem;
    }

    &__logo-container {
        display: flex;
        margin: 2.4rem 0 11rem 2.4rem;
        width: max-content;
    }

    &__toggle {
        @include square-size($_toggle-size);

        background-color: $color-transparent;
        border: 0;
        border-radius: 50%;
        cursor: pointer;
        left: 19.2rem;
        outline: transparent;
        position: absolute;
        top: 12rem;
    }

    &__close-icon {
        margin-right: 1.6rem;

        path {
            stroke: $color-white;
        }
    }

    &__toggle-icon {
        @include square-size($_toggle-size);
        fill: $color-fiord;

        &:hover {
            fill: $color-dark-fiord;
        }
    }

    &__list {
        margin-left: 2rem;
    }

    &__list-icon {
        @include square-size($icon-size);

        stroke: $color-light-porcelain;
    }

    &__list-item {
        @include typography-h4-alternative;

        align-items: center;
        border: 0;
        border-radius: 2.75rem 0 0 2.75rem;
        color: $color-light-porcelain;
        cursor: pointer;
        display: flex;
        flex-direction: row;
        height: 5.5rem;
        justify-content: flex-start;
        margin-bottom: 1.7rem;
        outline-offset: -3px;
        position: relative;
        text-decoration: none;
        width: 100%;
    }

    &__list-icon-container {
        @include square-size($icon-size);

        margin-left: $_margin-size;
    }

    &__item-title {
        margin-left: $_margin-size;
        transition: opacity 1500ms, visibility 1500ms;
        transition-delay: 400ms;
    }

    &__list-item--active {
        background-color: $color-light-porcelain;
        box-shadow: inset 0.2rem 0.2rem rgba(0, 0, 0, 0.14);
        color: $color-fiord;

        .sidebar__list-icon {
            stroke: $color-fiord;
        }

        .sidebar__corner-top {
            &::before {
                background-color: $color-light-porcelain;
                content: '';
                display: block;
                height: $_button-rounding-size;
                position: absolute;
                right: 0;
                top: -$_button-rounding-size;
                width: $_button-rounding-size;
            }

            &::after {
                background-color: $color-bright-violet;
                border-radius: 0 0 $_button-rounding-size;
                box-shadow: 0 0.2rem rgba(0, 0, 0, 0.14);
                content: '';
                display: block;
                height: $_button-rounding-size;
                position: absolute;
                right: 0;
                top: -$_button-rounding-size;
                width: $_button-rounding-size;
                z-index: $z-index-base;
            }
        }

        .sidebar__corner-bottom {
            &::before {
                background-color: $color-light-porcelain;
                bottom: -$_button-rounding-size;
                content: '';
                height: $_button-rounding-size;
                position: absolute;
                right: 0;
                width: $_button-rounding-size;
            }

            &::after {
                background-color: $color-bright-violet;
                border-radius: 0 $_button-rounding-size 0 0;
                bottom: -$_button-rounding-size;
                content: '';
                height: $_button-rounding-size;
                position: absolute;
                right: 0;
                width: $_button-rounding-size;
            }
        }

        &::after {
            background-color: $color-light-porcelain;
            content: '';
            height: 5.5rem;
            position: absolute;
            right: 0;
            width: $_button-rounding-size;
        }
    }
}

.sidebar--closed.sidebar {
    width: 9.6rem;

    .sidebar__toggle {
        transform: translateX(-11rem) rotate(180deg);
    }

    .sidebar__item-title {
        opacity: 0;
        transition: opacity 250ms, visibility 250ms;
        visibility: hidden;
    }

    .sidebar__logo {
        fill: $color-transparent;
        transition: fill 500ms;
    }
}

.sidebar__list-item:hover {
    .sidebar__list-icon {
        animation: shake 0.5s;
    }
}

